ui fixes in shows genres previews on mobile

--- a/src/components/ShowOverview.css
+++ b/src/components/ShowOverview.css
@@ -861,4 +861,8 @@
   .markSeason-btn {
     font-size: 1rem;
   }
+
+  .show-genres {
+    font-size: 0.7rem;
+  }
 }
